--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@
 }
 
 body {
-    background: #081b29;
     color: #ededed;
 }
 
@@ -48,6 +47,10 @@ body {
 
 .home {
     height: 100vh;
+    background-image: url('images/me.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
     display: flex;
     align-items: center;
     padding: 0 10%;
@@ -101,6 +104,10 @@ body {
     transition: .5s;
 }
 
+.btn-box a:hover {
+    color: #00abf0;
+}
+
 .btn-box a:nth-child(2) {
     background: transparent;
     color: #00abf0;
@@ -127,5 +134,51 @@ body {
 }
 
 .btn-box a:hover:before {
+    width: 100%;
+}
+
+.home-sci {
+    position: absolute;
+    bottom: 40px;
+    width: 170px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.home-sci a {
+    position: relative;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    background: transparent;
+    border: 2px solid #00abf0;
+    border-radius: 50%;
+    font-size: 20px;
+    color: #00abf0;
+    text-decoration: none;
+    z-index: 1;
+    overflow: hidden;
+    transition: .5s;
+}
+
+.home-sci a:hover {
+    color: #081b29;
+}
+
+.home-sci a::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    background: #00abf0;
+    z-index: -1;
+    transition: .5s;
+}
+
+.home-sci a:hover::before {
     width: 100%;
 }
