--- a/style.css
+++ b/style.css
@@ -104,6 +104,7 @@ nav ul li a:hover {
 
 .home-content h3 {
     position: relative;
+    margin-left: -300px;
     font-size: 32px;
     font-weight: 700;
     color: #00abf0;
@@ -209,6 +210,7 @@ h4{
 
 .home-sci {
     position: absolute;
+    margin-left: 190px;
     bottom: 40px;
     width: 170px;
     display: flex;
